# wamp-xbr

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  justfile  package-lock.json  package.json  pyproject.toml  setup.py
.github/templates/: discussion-post.md.j2
.github/workflows/: main.yml  release-post-comment.yml  release.yml
docs/: changelog.rst  conf.py  contributing.rst  getting-started.rst  index.rst  releases.rst
docs/project/: ganache.rst  remixide.rst
src/xbr/: __init__.py  _cli.py  _config.py  _eip712_authority_certificate.py  _eip712_delegate_certificate.py  _frealm.py  _seller.py  _version.py
src/xbr/test/: test_xbr_frealm.py  test_xbr_schema_wamp.py  test_xbr_schema_wamp_control.py
xbr/: __init__.py  _abi.py  _blockchain.py  _buyer.py  _cli.py  _eip712_certificate_chain.py  _gui.py  _secmod.py  _seller.py  _version.py
xbr/test/: test_xbr_argon2.py  test_xbr_config.py  test_xbr_eip712.py  test_xbr_mnemonic.py  test_xbr_schema_demo.py  test_xbr_secmod.py  test_xbr_web3.py
