[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbr"
dynamic = ["version"]
description = "XBR smart contracts and ABIs"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    {name = "typedef int GmbH", email = "autobahnws@googlegroups.com"}
]
keywords = ["autobahn", "crossbar", "wamp", "xbr", "ethereum", "abi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    # bitarray is required by eth-account, but on pypy
    # see discussion/links on https://github.com/crossbario/autobahn-python/pull/1617
    "bitarray>=2.7.5",
    # CLI handling and color terminal output
    "click>=8.1.2",
    # the following is needed for XBR basics and XBR IDL code generation
    "cbor2>=5.2.0",
    "twisted>=20.3.0",
    # ImportError: cannot import name 'getargspec' from 'inspect'
    # https://github.com/ethereum/web3.py/issues/2704#issuecomment-1369041219
    "web3[ipfs]>=6.0.0",
    # the following is needed for EIP712 ("signed typed data"):
    "rlp>=2.0.1",
    "py-eth-sig-utils>=0.4.0",
    "py-ecc>=5.1.0",
    "eth-abi>=4.0.0",
    # the following is needed (at least) for BIP32/39 mnemonic processing
    "mnemonic>=0.19",
    "base58>=2.1.0",
    "ecdsa>=0.16.1",
    "py-multihash>=2.0.1",
    # the following is needed for the WAMP/XBR IDL code generator
    "jinja2>=2.11.3",
    "yapf==0.29.0",
    # the following is needed for XBR account synch and device pairing
    "spake2>=0.8",
    "hkdf>=0.0.3",
]

[project.optional-dependencies]
# UI based tools, e.g. xbrnetwork-ui (autobahn.xbr._gui:_main)
ui = [
    # the following is needed for the graphical XBR onboarding UI
    #
    # On PyPy, even pygobject-3.52.3 does not work, because they use a pythoncapi-compat which is too old
    #
    # See:
    #   - https://github.com/pypy/pypy/issues/5248
    #   - https://gitlab.gnome.org/GNOME/pygobject/-/issues/684
    #
    # This was fixed here:
    #   - https://gitlab.gnome.org/GNOME/pygobject/-/merge_requests/419
    #
    # IMPORTANT: because of above, you will need to
    #
    #  pip3 install git+https://gitlab.gnome.org/GNOME/pygobject
    #
    # FIXME: reactivate here once pygobject-3.52.4 is released!
    #
    # "PyGObject>=3.52.4",
]

# Development dependencies
dev = [
    # Build tools
    "build>=1.0.0",
    "wheel>=0.36.2",
    "twine>=3.3.0",

    # Testing
    "pytest>=7.0.0",
    "pytest-runner>=2.11.1",
    "coverage>=5.0.0",

    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.0.0",

    # Documentation
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wamp-proto/wamp-xbr"
Repository = "https://github.com/wamp-proto/wamp-xbr"
Documentation = "https://xbr.network/docs"
Changelog = "https://github.com/wamp-proto/wamp-xbr/blob/master/CHANGELOG.md"
Issues = "https://github.com/wamp-proto/wamp-xbr/issues"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["xbr*"]
exclude = ["test*", "autobahn-asyncio-xbr*", "autobahn-twisted-xbr*"]

[tool.setuptools.dynamic]
version = {attr = "xbr._version.__version__"}

# Ruff configuration (replaces flake8, black, yapf)
[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E721",  # type() comparison instead of isinstance() - deliberate style choice
    "E402",  # module level import not at top (intentional in some files)
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["xbr/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["xbr"]
omit = ["*/test/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
